# controllers/ViewRoom.go
@@ -1,17 +1,21 @@
 package controllers
 
-import (
-	"fmt"
-)
+import "fmt"
 
 // @Title ViewRoom
 // @Description Get roomId
-// @Param	roomId		path 	string	true	"roomId"
-// @Param	username		path 	string	true	"username"
-// @Success 200 {object} responses.BoolResponse
-// @router /:roomId/:username [get]
-func (c *RoomController) GETRoomId(roomId, username string) {
-	fmt.Println("[GETRoomId]", roomId)
+// @Param	roomId		query 	string	true	"roomId"
+// @Param	username	query 	string	true	"username"
+// @router / [get]
+func (c *RoomController) ViewRoom() {
+	var (
+		roomId, username string
+	)
+
+	c.Ctx.Input.Bind(&roomId, "roomId")
+	c.Ctx.Input.Bind(&username, "username")
+
+	fmt.Println(roomId, username)
 	c.Data["roomId"] = roomId
 	c.Data["username"] = username
 	c.TplName = "chat.html"
