# swagger/swagger.json
@@ -65,53 +65,32 @@
                     }
                 ]
             }
-        },
-        "/{roomId}/{username}": {
-            "get": {
-                "tags": [
-                    "APINoiTu/controllersRoomController"
-                ],
-                "description": "Get roomId",
-                "operationId": "RoomController.ViewRoom",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "roomId",
-                        "description": "roomId",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "path",
-                        "name": "username",
-                        "description": "username",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/responses.BoolResponse"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
         "models.BodyCheck": {
             "title": "BodyCheck",
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "pre_seq": {
+                    "type": "string"
+                },
+                "seq": {
+                    "type": "string"
+                }
+            }
         },
         "models.BoolResponse": {
             "title": "BoolResponse",
-            "type": "object"
-        },
-        "responses.BoolResponse": {
-            "title": "BoolResponse",
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "boolean"
+                },
+                "error_mess": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
